reduce duplicate code & code format & refactor benchmark case