@@ -35,6 +35,7 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 import org.openjdk.jmh.infra.Blackhole;
 
+import java.lang.invoke.*;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.Random;
@@ -45,7 +46,7 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Thread)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(value = 3)
+@Fork(value = 3, jvmArgsAppend = {"--add-opens", "java.base/java.math=ALL-UNNAMED"})
 public class BigDecimals {
 
     /** Make sure TEST_SIZE is used to size the arrays. We need this constant to parametrize the operations count. */
@@ -60,7 +61,9 @@ public class BigDecimals {
     private BigDecimal[] bigDecimals;
     private String[] stringInputs;
     private double[] doubleInputs;
-    private BigDecimal[] hugeArray, largeArray, smallArray;
+    private BigDecimal[] hugeArray;
+    private BigDecimal[] large2Array, small2Array;
+    private BigDecimal[] large3Array, small3Array;
 
     @Setup
     public void setup() {
@@ -96,22 +99,28 @@ public class BigDecimals {
         hugeArray = new BigDecimal[TEST_SIZE];
 
         /*
-        * Large numbers less than MAX_LONG but larger than MAX_INT
-        */
-        largeArray = new BigDecimal[TEST_SIZE];
+         * Large numbers less than MAX_LONG but larger than MAX_INT
+         */
+        large2Array = new BigDecimal[TEST_SIZE];
+        large3Array = new BigDecimal[TEST_SIZE];
 
         /*
-        * Small number less than MAX_INT
-        */
-        smallArray = new BigDecimal[TEST_SIZE];
+         * Small number less than MAX_INT
+         */
+        small2Array = new BigDecimal[TEST_SIZE];
+        small3Array = new BigDecimal[TEST_SIZE];
 
         dummyStringArray = new String[TEST_SIZE];
         for (int i = 0; i < TEST_SIZE; i++) {
             int value = Math.abs(r.nextInt());
             hugeArray[i] = new BigDecimal("" + ((long) value + (long) Integer.MAX_VALUE)
                     + ((long) value + (long) Integer.MAX_VALUE) + ".55");
-            largeArray[i] = new BigDecimal("" + ((long) value + (long) Integer.MAX_VALUE) + ".55");
-            smallArray[i] = new BigDecimal("" + ((long) value / 1000) + ".55");
+
+            large2Array[i] = new BigDecimal("" + ((long) value + (long) Integer.MAX_VALUE) + ".55");
+            large3Array[i] = new BigDecimal("" + ((long) value + (long) Integer.MAX_VALUE) + ".555");
+
+            small2Array[i] = new BigDecimal("" + ((long) value / 1000) + ".55");
+            small3Array[i] = new BigDecimal("" + ((long) value / 1000) + ".555");
         }
     }
 
@@ -130,23 +139,6 @@ public class BigDecimals {
     public void testConstructorWithDouble(Blackhole bh) {
         for (double s : doubleInputs) {
             bh.consume(new BigDecimal(s));
-        }
-    }
-
-    /** Invokes the toString method of BigDecimal with various different values. */
-    @Benchmark
-    @OperationsPerInvocation(TEST_SIZE)
-    public void testToString(Blackhole bh) {
-        for (BigDecimal s : bigDecimals) {
-            bh.consume(s.toString());
-        }
-    }
-
-    @Benchmark
-    @OperationsPerInvocation(TEST_SIZE)
-    public void testToEngineeringString(Blackhole bh) {
-        for (BigDecimal s : bigDecimals) {
-            bh.consume(s.toEngineeringString());
         }
     }
 
@@ -212,54 +204,151 @@ public class BigDecimals {
         }
     }
 
-    /** Test BigDecimal.toString() with huge numbers larger than MAX_LONG */
+    /** Test BigDecimal.toString() with large numbers (scale 2) less than MAX_LONG but larger than MAX_INT */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testHugeToString(Blackhole bh) {
+    public void hugeLayoutCharsToString(Blackhole bh) throws Throwable {
         for (BigDecimal s : hugeArray) {
-            bh.consume(s.toString());
+            bh.consume((String) BigDecimalAccess.layoutChars.invokeExact(s, true));
         }
     }
 
+    /** Test BigDecimal.toEngineeringString() with huge numbers larger than MAX_LONG */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testHugeToEngineeringString(Blackhole bh) {
+    public void hugeEngineeringToString(Blackhole bh) {
         for (BigDecimal s : hugeArray) {
             bh.consume(s.toEngineeringString());
         }
     }
 
-    /** Test BigDecimal.toString() with large numbers less than MAX_LONG but larger than MAX_INT */
+    /** Test BigDecimal.toEngineeringString() with huge numbers larger than MAX_LONG */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testLargeToString(Blackhole bh) {
-        for (BigDecimal s : largeArray) {
-            bh.consume(s.toString());
+    public void hugePlainToString(Blackhole bh) {
+        for (BigDecimal s : hugeArray) {
+            bh.consume(s.toPlainString());
         }
     }
 
+    /** Test BigDecimal.toString() with large numbers (scale 2) less than MAX_LONG but larger than MAX_INT */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testLargeToEngineeringString(Blackhole bh) {
-        for (BigDecimal s : largeArray) {
+    public void largeScale2LayoutCharsToString(Blackhole bh) throws Throwable {
+        for (BigDecimal s : large2Array) {
+            bh.consume((String) BigDecimalAccess.layoutChars.invokeExact(s, true));
+        }
+    }
+
+    /** Test BigDecimal.toEngineeringString() with large numbers (scale 2) less than MAX_LONG but larger than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void largeScale2EngineeringToString(Blackhole bh) {
+        for (BigDecimal s : large2Array) {
             bh.consume(s.toEngineeringString());
         }
     }
 
-    /** Test BigDecimal.toString() with small numbers less than MAX_INT */
+    /** Test BigDecimal.toPlainString() with large numbers (scale 2) less than MAX_LONG but larger than MAX_INT */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testSmallToString(Blackhole bh) {
-        for (BigDecimal s : smallArray) {
-            bh.consume(s.toString());
+    public void largeScale2PlainToString(Blackhole bh) {
+        for (BigDecimal s : large2Array) {
+            bh.consume(s.toPlainString());
         }
     }
 
+    /** Test BigDecimal.toString() with large numbers (scale 3) less than MAX_LONG but larger than MAX_INT */
     @Benchmark
     @OperationsPerInvocation(TEST_SIZE)
-    public void testSmallToEngineeringString(Blackhole bh) {
-        for (BigDecimal s : smallArray) {
+    public void largeScale3LayoutCharsToString(Blackhole bh) throws Throwable {
+        for (BigDecimal s : large3Array) {
+            bh.consume((String) BigDecimalAccess.layoutChars.invokeExact(s, true));
+        }
+    }
+
+    /** Test BigDecimal.toEngineeringString() with large numbers (scale 3) less than MAX_LONG but larger than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void largeScale3EngineeringToString(Blackhole bh) {
+        for (BigDecimal s : large3Array) {
             bh.consume(s.toEngineeringString());
+        }
+    }
+
+
+    /** Test BigDecimal.toPlainString() with large numbers (scale 3) less than MAX_LONG but larger than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void largeScale3PlainToString(Blackhole bh) {
+        for (BigDecimal s : large3Array) {
+            bh.consume(s.toPlainString());
+        }
+    }
+
+    /** Test BigDecimal.toString() with small numbers (scale 2) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale2LayoutCharsToString(Blackhole bh) throws Throwable {
+        for (BigDecimal s : small2Array) {
+            bh.consume((String) BigDecimalAccess.layoutChars.invokeExact(s, true));
+        }
+    }
+
+    /** Test BigDecimal.toEngineeringString() with small numbers (scale 2) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale2EngineeringToString(Blackhole bh) {
+        for (BigDecimal s : small2Array) {
+            bh.consume(s.toEngineeringString());
+        }
+    }
+
+    /** Test BigDecimal.toPlainString() with small numbers (scale 3) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale2PlainToString(Blackhole bh) {
+        for (BigDecimal s : small2Array) {
+            bh.consume(s.toPlainString());
+        }
+    }
+
+    /** Test BigDecimal.toString() with small numbers (scale 3) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale3LayoutCharsToString(Blackhole bh) throws Throwable {
+        for (BigDecimal s : small3Array) {
+            bh.consume((String) BigDecimalAccess.layoutChars.invokeExact(s, true));
+        }
+    }
+
+    /** Test BigDecimal.toEngineeringString() with small numbers (scale 3) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale3EngineeringToString(Blackhole bh) {
+        for (BigDecimal s : small3Array) {
+            bh.consume(s.toEngineeringString());
+        }
+    }
+
+    /** Test BigDecimal.toPlainString() with small numbers (scale 3) less than MAX_INT */
+    @Benchmark
+    @OperationsPerInvocation(TEST_SIZE)
+    public void smallScale3PlainToString(Blackhole bh) {
+        for (BigDecimal s : small3Array) {
+            bh.consume(s.toPlainString());
+        }
+    }
+
+    static class BigDecimalAccess {
+        final static MethodHandle layoutChars;
+        static {
+            try {
+                MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(BigDecimal.class, MethodHandles.lookup());
+                layoutChars = lookup.findVirtual(BigDecimal.class, "layoutChars", MethodType.methodType(String.class, boolean.class));
+            } catch (Throwable e) {
+                throw new AssertionError(e);
+            }
         }
     }
 }
